Modified names of div ids + added canvas element

--- a/APP/index.html
+++ b/APP/index.html
@@ -10,10 +10,10 @@
 		<div id="searchbar">
 			<input type="text" id="search">
 		</div>
-		<div id="Wordcloud">
-			<p>This is where the wordcloud will be rendered</p>
+		<div id="wordcloud">
+			<canvas id="wordcloud-render"></canvas>
 		</div>
-		<div id="Websites">
+		<div id="websites">
 			<p>This is where the search results will be listed</p>
 		</div>
 	</body>
