more css added to index.html

--- a/APP/index.html
+++ b/APP/index.html
@@ -8,13 +8,12 @@
 	</head>
 	<body>
 		<div id="searchbar">
-			<input type="text" id="search">
+			<h1>Google</h1><br><h1 style="color: red;">v2.0</h1><br>
+			<input type="text" id="search" placeholder="Enter your search term here...">
 		</div>
 		<div id="wordcloud">
-			<canvas id="wordcloud-render"></canvas>
 		</div>
 		<div id="websites">
-			<p>This is where the search results will be listed</p>
 		</div>
 	</body>
 	<!-- Bootstrap -->
