wordcloud is in beta

--- a/APP/index.html
+++ b/APP/index.html
@@ -11,7 +11,9 @@
 			<h1>Google</h1><br><h1 style="color: red;">v2.0</h1><br>
 			<input type="text" id="search" placeholder="Enter your search term here...">
 		</div>
-		<div id="wordcloud">
+		<div id="cloud-container">
+			<svg id="wordcloud" version="1.1" id= baseProfile="full" width="1000" height="1000" xmlns="http://www.w3.org/2000/svg">
+			</svg>
 		</div>
 		<div id="websites">
 		</div>
