--- a/APP/index.html
+++ b/APP/index.html
@@ -5,8 +5,13 @@
 		<title>JvJ Search Engine</title>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="d3.js"></script>
+		<script src="d3-cloud.js"></script>
 	</head>
 	<body>
+		<div id="topbar">
+			<a href="file:///Users/VirChaudhury/Desktop/hackathon/JvJ/APP/index.html">Main</a>
+		</div>
 		<div id="searchbar">
 			<h1>Google</h1><br><h1 style="color: red;">v2.0</h1><br>
 			<input type="text" id="search" placeholder="Enter your search term here...">
