--- a/APP/index.html
+++ b/APP/index.html
@@ -5,6 +5,7 @@
 		<title>JvJ Search Engine</title>
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 		<script src="d3.js"></script>
 		<script src="d3-cloud.js"></script>
 	</head>
