last commit or not who knows

--- a/APP/index.html
+++ b/APP/index.html
@@ -8,6 +8,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 		<script src="d3.js"></script>
 		<script src="d3-cloud.js"></script>
+
 	</head>
 	<body>
 		<div id="topbar">
@@ -16,12 +17,13 @@
 		</div>
 			<div id="root-container">
 				<div id="searchbar">
-					<h1>Google</h1><br><h1 style="color: red;">v2.0</h1><br>
+					<div style="text-align: center; margin: auto;"><h1>Data</h1><br><h1 style="color: red;">Refinery</h1><br></div>
 					<input type="text" id="search" placeholder="Enter your search term here...">
 				</div>
 				<div id="cloud-container">
 				</div>
 			</div>
 	</body>
+	
 	<script src="script.js"></script>
 </html>
